Finish step 6: add main section, article and article heading

--- a/bloco_3/dia_4/mantis-shrimp/style.css
+++ b/bloco_3/dia_4/mantis-shrimp/style.css
@@ -5,3 +5,11 @@ header {
 nav {
   background-color: lightblue;
 }
+
+main {
+  background-color: lightgray;
+}
+
+article {
+  background-color: lightyellow
+}
