Add table with scientific information to the first section

--- a/bloco_3/dia_4/mantis-shrimp/style.css
+++ b/bloco_3/dia_4/mantis-shrimp/style.css
@@ -17,3 +17,11 @@ article {
 section {
   background-color: lightgreen;
 }
+
+table {
+  background-color: wheat;
+}
+
+caption {
+  caption-side: bottom;
+}
