--- a/bloco5/dia3/calendar/style.css
+++ b/bloco5/dia3/calendar/style.css
@@ -31,10 +31,11 @@ button {
   color: #777;
   display: inline-block;
   font-size:20px;
-  margin: 5px 0;
+  margin: 0;
   text-align: center;
   vertical-align: middle;
-  width: 13.6%;
+  padding: 15px;
+  width: calc(13.6% - 30px);
 }
 
 .input-container {
@@ -145,11 +146,17 @@ label {
   display: inline-block;
   text-align: center;
   vertical-align: middle;
-  width: 13.6%;
+  padding: 15px;
+  width: calc(13.6% - 30px);
 }
 
 .week-days {
   font-size: 20px;
   margin: 0px;
   padding: 10px 0;
+}
+
+#days .holiday {
+  color: white;
+  background-color: rgb(217, 86, 63);
 }
