--- a/bloco5/dia3/calendar/style.css
+++ b/bloco5/dia3/calendar/style.css
@@ -156,7 +156,7 @@ label {
   padding: 10px 0;
 }
 
-#days .holiday {
+/* #days .holiday {
   color: white;
   background-color: rgb(217, 86, 63);
-}
+} */
