--- a/bloco6/dia1/resume-form/style.css
+++ b/bloco6/dia1/resume-form/style.css
@@ -59,6 +59,7 @@ textarea {
   background-color: #f8d7da;
   border-color: #f5c6cb;
   padding: .75rem 1.25rem;
+  margin: 1rem 0;
   border: 1px solid transparent;
   border-radius: .25rem;
 }
