--- a/bloco6/dia4/style.css
+++ b/bloco6/dia4/style.css
@@ -53,7 +53,7 @@ body {
 .movie-container {
   display: flex;
   flex-direction: column;
-  flex-basis: 700px;
+  flex: 10 700px;
 }
 
 .movie-container h2 {
