--- a/bloco6/dia5/style.css
+++ b/bloco6/dia5/style.css
@@ -5,7 +5,6 @@ body {
   flex-flow: column wrap;
   font-family: Raleway, sans-serif;
   justify-content: center;
-  overflow: hidden;
   width: 100vw;
 }
 
@@ -64,4 +63,28 @@ p strong {
 
 .card:nth-of-type(3) {
   background-color: #41197f;
+}
+
+@media screen and (min-width: 500px) {
+  .cards div:nth-child(1) {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 600px) and (max-width: 1000px) {
+  .cards div:nth-child(2) {
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 649px), (min-width: 951px) {
+  .cards div:nth-child(3) {
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 499px) {
+  p.trick {
+    color: black;
+  }
 }
