--- a/bloco6/dia5/small-screen-layout/exercise1.css
+++ b/bloco6/dia5/small-screen-layout/exercise1.css
@@ -1,11 +1,12 @@
 body {
-
+  font-size: 1.1rem;
+  padding: 0 5vw;
 }
 h1 {
-
+  font-size: 1.8em;
 }
 h2 {
-
+  font-size: 1.4em;
 }
 
 img {
@@ -13,5 +14,5 @@ img {
 }
 
 figure {
-    margin: 0;
+  margin: 1.5em 0;
 }
