--- a/bloco6/dia5/small-screen-layout/exercise1.css
+++ b/bloco6/dia5/small-screen-layout/exercise1.css
@@ -1,10 +1,16 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-size: 1.1rem;
   padding: 0 5vw;
 }
+
 h1 {
   font-size: 1.8em;
 }
+
 h2 {
   font-size: 1.4em;
 }
@@ -14,5 +20,30 @@ img {
 }
 
 figure {
-  margin: 1.5em 0;
+  margin: 1em 0;
+  display: inline-block;
+}
+
+.figures-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+@media screen and (min-width: 521px) {
+  body {
+    background-color: #ECEFF4;
+    font-size: 1.2em;
+  }
+
+  figure {
+    width: 50%;
+  }
+
+  figure:nth-child(odd) {
+    padding-right: 1em;
+  }
+
+  figure:nth-child(even) {
+    padding-left: 1em;
+  }
 }
