--- a/bloco6/dia5/alice-in-wonderland/exercise2.css
+++ b/bloco6/dia5/alice-in-wonderland/exercise2.css
@@ -32,16 +32,80 @@ h1 , p:first-of-type {
   margin-top: 0;
 }
 
+header {
+  margin-bottom: 4em;
+}
+
 p:last-of-type {
   margin-bottom: 0;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  max-width: 1024px;
+  margin: 0 auto;
 }
 
 .top-menu {
   display: flex;
   list-style: none;
-  justify-content: space-evenly;
+  justify-content: center;
   text-transform: uppercase;
   font-size: 0.92em;
   font-weight: 700;
   padding: 0;
+}
+
+.top-menu li:not( :last-child ) {
+  margin-right: 1em;
+}
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  margin-top: 4em;
+  text-align: center;
+}
+
+@media screen and (min-width: 700px) and (max-width: 900px) {
+  body {
+    padding: 4vw;
+  }
+
+  .sidebar {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+}
+
+@media screen and (min-width: 901px) {
+  .container {
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  header {
+    flex-basis: 100%;
+  }
+
+  .sidebar {
+    flex-basis: 25%;
+    order: 2;
+  }
+
+  .main-content {
+    flex-basis: 75%;
+    order: 1;
+    padding-right: 3vw;
+  }
+
+  footer {
+    flex-basis: 100%;
+    order: 4;
+  }
 }
