--- a/bloco6/dia5/alice-in-wonderland/exercise2.css
+++ b/bloco6/dia5/alice-in-wonderland/exercise2.css
@@ -8,6 +8,7 @@ html {
 body {
   padding: 6vw;
   font-size: 1.1rem;
+  font-family: Lora, serif;
 }
 
 a {
@@ -33,7 +34,7 @@ h1 , p:first-of-type {
 }
 
 header {
-  margin-bottom: 4em;
+  margin-bottom: 3em;
 }
 
 p:last-of-type {
@@ -67,7 +68,7 @@ p:last-of-type {
 }
 
 footer {
-  margin-top: 4em;
+  margin-top: 3em;
   text-align: center;
 }
 
@@ -83,6 +84,11 @@ footer {
 }
 
 @media screen and (min-width: 901px) {
+  body {
+    padding-top: 3.5vw;
+    padding-bottom: 3.5vw;
+  }
+
   .container {
     flex-direction: row;
     justify-content: center;
