--- a/bloco6/dia5/alice-in-wonderland/exercise2.css
+++ b/bloco6/dia5/alice-in-wonderland/exercise2.css
@@ -6,9 +6,11 @@ html {
 }
 
 body {
-  padding: 6vw;
+  padding: 7.5vw;
   font-size: 1.1rem;
   font-family: Lora, serif;
+  background: rgb(236,239,244);
+  background: linear-gradient(180deg, rgba(236,239,244,1) 0%, rgba(255,255,255,1) 20%);
 }
 
 a {
@@ -34,7 +36,7 @@ h1 , p:first-of-type {
 }
 
 header {
-  margin-bottom: 3em;
+  margin-bottom: 3vw;
 }
 
 p:last-of-type {
@@ -58,6 +60,10 @@ p:last-of-type {
   padding: 0;
 }
 
+.top-menu a {
+  opacity: 0.9;
+}
+
 .top-menu li:not( :last-child ) {
   margin-right: 1em;
 }
@@ -68,7 +74,7 @@ p:last-of-type {
 }
 
 footer {
-  margin-top: 3em;
+  margin-top: 5vw;
   text-align: center;
 }
 
@@ -100,12 +106,12 @@ footer {
   }
 
   .sidebar {
-    flex-basis: 25%;
+    flex-basis: 30%;
     order: 2;
   }
 
   .main-content {
-    flex-basis: 75%;
+    flex-basis: 70%;
     order: 1;
     padding-right: 3vw;
   }
