Finish print layout

--- a/bloco6/dia5/mobile-and-print/exercise3.css
+++ b/bloco6/dia5/mobile-and-print/exercise3.css
@@ -80,3 +80,22 @@
   padding: 20px;
   height: 1%;
 }
+
+@media print {
+  #header , #navigation , #footer {
+    display: none;
+  }
+
+  #content-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #content img {
+    width: 75%;
+  }
+
+  #aside {
+    margin-left: 4%;
+  }
+}
