--- a/bloco6/dia5/mobile-and-print/exercise3.css
+++ b/bloco6/dia5/mobile-and-print/exercise3.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 #container {
   margin: 0 auto;
   width: 100%;
@@ -97,5 +101,40 @@
 
   #aside {
     margin-left: 4%;
+  }
+}
+
+@media screen and (max-width: 730px) {
+  body {
+    padding: 0;
+    margin-top: 80px;
+  }
+
+  #content img {
+    max-width: 100%;
+  }
+
+  #header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+
+  #navigation ul {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #navigation ul li a {
+    border: none;
+  }
+
+  #aside {
+    display: none;
+  }
+
+  #footer {
+    text-align: center;
   }
 }
