--- a/bloco7/dia1/exercise2-3/style.css
+++ b/bloco7/dia1/exercise2-3/style.css
@@ -1,3 +1,29 @@
-body::before {
-  content: 'Stylesheet connected!';
+.page-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  max-width: 1110px;
+  margin: 0 auto;
+}
+
+.counter-button {
+  border: none;
+  border-radius: 3px;
+  padding: 10px 20px;
+  background-color: rgb(13, 110, 253);
+  color: white;
+  cursor: pointer;
+  box-shadow: 0px 0px 4px rgba(170, 170, 170, 0.8);
+  transition: background-color .2s ease-in-out, box-shadow .2s ease-in-out;
+}
+
+.counter-button:hover {
+  background-color: rgb(10, 88, 202);
+  box-shadow: 0px 0px 6px rgba(170, 170, 170, 0.8);
+}
+
+.counter-button:active {
+  box-shadow: inset 0px 0px 7px rgba(9, 79, 185, 0.8);
 }
