--- a/bloco7/dia1/exercise2-3/style.css
+++ b/bloco7/dia1/exercise2-3/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: Roboto, sans-serif;
+}
+
 .page-container {
   display: flex;
   flex-direction: column;
@@ -17,6 +21,8 @@
   cursor: pointer;
   box-shadow: 0px 0px 4px rgba(170, 170, 170, 0.8);
   transition: background-color .2s ease-in-out, box-shadow .2s ease-in-out;
+  font-family: Roboto, sans-serif;
+  font-size: 1.1em;
 }
 
 .counter-button:hover {
