--- a/bloco7/dia1/exercise2-3/style.css
+++ b/bloco7/dia1/exercise2-3/style.css
@@ -22,7 +22,9 @@ body {
   box-shadow: 0px 0px 4px rgba(170, 170, 170, 0.8);
   transition: background-color .2s ease-in-out, box-shadow .2s ease-in-out;
   font-family: Roboto, sans-serif;
-  font-size: 1.1em;
+  font-size: 0.9em;
+  font-weight: 500;
+  text-transform: uppercase;
 }
 
 .counter-button:hover {
