--- a/bloco7/dia1/exercise2-3/style.css
+++ b/bloco7/dia1/exercise2-3/style.css
@@ -16,7 +16,7 @@ body {
 
 .counter-container {
   display: flex;
-  flex-basis: 200px;
+  flex-basis: 210px;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
@@ -27,7 +27,7 @@ body {
 }
 
 .counter-display {
-  font-size: 6em;
+  font-size: 5.5em;
   font-weight: 400;
   font-family: Roboto Mono, monospace;
   line-height: 1;
@@ -36,16 +36,17 @@ body {
 .counter-button {
   border: none;
   border-radius: 3px;
-  padding: 10px 20px;
+  padding: 10px 25px;
   background-color: rgb(13, 110, 253);
   color: white;
   cursor: pointer;
   box-shadow: 0px 0px 4px rgba(170, 170, 170, 0.8);
   transition: background-color .2s ease-in-out, box-shadow .2s ease-in-out;
   font-family: Roboto, sans-serif;
-  font-size: 0.9em;
+  font-size: 1em;
   font-weight: 500;
   text-transform: uppercase;
+  user-select: none;
 }
 
 .counter-button:hover {
